// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for icon: arrow-head-right, iconSource: , active: false, stretch: { base: true, xs: false, s: true, m: false, l: true, xl: false }, size: { base: 'x-small', xs: 'small', s: 'medium', m: 'large', l: 'x-large', xl: 'inherit' }, hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, alignLabel: { base: 'start', xs: 'end', s: 'start', m: 'end', l: 'start', xl: 'end' }, underline: false and hasSlottedAnchor: false 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: block;
  width: 100%;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
@media(min-width:480px) {
  :host {
    display: inline-block;
    width: auto;
    vertical-align: top;
  }
}

@media(min-width:760px) {
  :host {
    display: block;
    width: 100%;
  }
}

@media(min-width:1000px) {
  :host {
    display: inline-block;
    width: auto;
    vertical-align: top;
  }
}

@media(min-width:1300px) {
  :host {
    display: block;
    width: 100%;
  }
}

@media(min-width:1760px) {
  :host {
    display: inline-block;
    width: auto;
    vertical-align: top;
  }
}

.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: pointer;
  color: var(--p-color-primary);
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  gap: 0;
  justify-content: space-between;
  align-items: center;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -2px;
  left: -2px;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.icon {
  position: relative;
  flex-shrink: 0;
  font-size: inherit;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.label {
  z-index: 1;
  white-space: nowrap;
  text-indent: -999999px;
  overflow: hidden;
  order: -1;
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(min-width:480px) {
  .root {
    gap: 4px;
    justify-content: flex-start;
    align-items: flex-start;
    font-size: 1rem;
  }
  .root::before {
    right: -4px;
    left: -4px;
  }
  .label {
    white-space: inherit;
    text-indent: 0;
    overflow: visible;
    order: 0;
  }
}

@media(min-width:760px) {
  .root {
    gap: 0;
    justify-content: space-between;
    align-items: center;
    font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  }
  .root::before {
    right: -2px;
    left: -2px;
  }
  .label {
    white-space: nowrap;
    text-indent: -999999px;
    overflow: hidden;
    order: -1;
  }
}

@media(min-width:1000px) {
  .root {
    gap: 4px;
    justify-content: flex-start;
    align-items: flex-start;
    font-size: clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem);
  }
  .root::before {
    right: -4px;
    left: -4px;
  }
  .label {
    white-space: inherit;
    text-indent: 0;
    overflow: visible;
    order: 0;
  }
}

@media(min-width:1300px) {
  .root {
    gap: 0;
    justify-content: space-between;
    align-items: center;
    font-size: clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem);
  }
  .root::before {
    right: -2px;
    left: -2px;
  }
  .label {
    white-space: nowrap;
    text-indent: -999999px;
    overflow: hidden;
    order: -1;
  }
}

@media(min-width:1760px) {
  .root {
    gap: 4px;
    justify-content: flex-start;
    align-items: flex-start;
    font-size: inherit;
  }
  .root::before {
    right: -4px;
    left: -4px;
  }
  .label {
    white-space: inherit;
    text-indent: 0;
    overflow: visible;
    order: 0;
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: var(--p-color-frosted-strong);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-head-right, iconSource: , active: false, stretch: false, size: small, hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, alignLabel: end, underline: false and hasSlottedAnchor: false 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: pointer;
  color: var(--p-color-primary);
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  gap: 0;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -2px;
  left: -2px;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.icon {
  position: relative;
  flex-shrink: 0;
  font-size: inherit;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.label {
  z-index: 1;
  white-space: nowrap;
  text-indent: -999999px;
  overflow: hidden;
  order: 0;
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(min-width:480px) {
  .root {
    gap: 4px;
  }
  .root::before {
    right: -4px;
    left: -4px;
  }
  .label {
    white-space: inherit;
    text-indent: 0;
    overflow: visible;
  }
}

@media(min-width:760px) {
  .root {
    gap: 0;
  }
  .root::before {
    right: -2px;
    left: -2px;
  }
  .label {
    white-space: nowrap;
    text-indent: -999999px;
    overflow: hidden;
  }
}

@media(min-width:1000px) {
  .root {
    gap: 4px;
  }
  .root::before {
    right: -4px;
    left: -4px;
  }
  .label {
    white-space: inherit;
    text-indent: 0;
    overflow: visible;
  }
}

@media(min-width:1300px) {
  .root {
    gap: 0;
  }
  .root::before {
    right: -2px;
    left: -2px;
  }
  .label {
    white-space: nowrap;
    text-indent: -999999px;
    overflow: hidden;
  }
}

@media(min-width:1760px) {
  .root {
    gap: 4px;
  }
  .root::before {
    right: -4px;
    left: -4px;
  }
  .label {
    white-space: inherit;
    text-indent: 0;
    overflow: visible;
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: var(--p-color-frosted-strong);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-head-right, iconSource: , active: false, stretch: false, size: small, hideLabel: false, alignLabel: end, underline: false and hasSlottedAnchor: false 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: pointer;
  color: var(--p-color-primary);
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  gap: 4px;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.icon {
  position: relative;
  flex-shrink: 0;
  font-size: inherit;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.label {
  z-index: 1;
  white-space: inherit;
  text-indent: 0;
  overflow: visible;
  order: 0;
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: var(--p-color-frosted-strong);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-head-right, iconSource: , active: false, stretch: false, size: small, hideLabel: false, alignLabel: end, underline: false and hasSlottedAnchor: false 2`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: pointer;
  color: var(--p-color-primary);
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  gap: 4px;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.icon {
  position: relative;
  flex-shrink: 0;
  font-size: inherit;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.label {
  z-index: 1;
  white-space: inherit;
  text-indent: 0;
  overflow: visible;
  order: 0;
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: var(--p-color-frosted-strong);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-head-right, iconSource: , active: false, stretch: false, size: small, hideLabel: false, alignLabel: end, underline: false and hasSlottedAnchor: true 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a) {
  all: unset !important;
}
::slotted(a)::before {
  content: "" !important;
  position: fixed !important;
  inset-block: -2px !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm)) !important;
  inset-inline: -4px !important;
}
::slotted(a:focus-visible)::before {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: pointer;
  color: var(--p-color-primary);
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  gap: 4px;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.icon {
  position: relative;
  flex-shrink: 0;
  font-size: inherit;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.label {
  z-index: 1;
  white-space: inherit;
  text-indent: 0;
  overflow: visible;
  order: 0;
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: var(--p-color-frosted-strong);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-head-right, iconSource: , active: false, stretch: false, size: small, hideLabel: false, alignLabel: end, underline: true and hasSlottedAnchor: false 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: pointer;
  color: var(--p-color-primary);
  text-decoration: underline;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  gap: 4px;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.icon {
  position: relative;
  flex-shrink: 0;
  font-size: inherit;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.label {
  z-index: 1;
  white-space: inherit;
  text-indent: 0;
  overflow: visible;
  order: 0;
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: var(--p-color-frosted-strong);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-head-right, iconSource: , active: false, stretch: false, size: small, hideLabel: false, alignLabel: left, underline: false and hasSlottedAnchor: false 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: pointer;
  color: var(--p-color-primary);
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  gap: 4px;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.icon {
  position: relative;
  flex-shrink: 0;
  font-size: inherit;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.label {
  z-index: 1;
  white-space: inherit;
  text-indent: 0;
  overflow: visible;
  order: 0;
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: var(--p-color-frosted-strong);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-head-right, iconSource: , active: false, stretch: false, size: small, hideLabel: false, alignLabel: right, underline: false and hasSlottedAnchor: false 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: pointer;
  color: var(--p-color-primary);
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  gap: 4px;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.icon {
  position: relative;
  flex-shrink: 0;
  font-size: inherit;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.label {
  z-index: 1;
  white-space: inherit;
  text-indent: 0;
  overflow: visible;
  order: 0;
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: var(--p-color-frosted-strong);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-head-right, iconSource: , active: false, stretch: false, size: small, hideLabel: true, alignLabel: end, underline: false and hasSlottedAnchor: false 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: pointer;
  color: var(--p-color-primary);
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  gap: 0;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -2px;
  left: -2px;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.icon {
  position: relative;
  flex-shrink: 0;
  font-size: inherit;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.label {
  z-index: 1;
  white-space: nowrap;
  text-indent: -999999px;
  overflow: hidden;
  order: 0;
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: var(--p-color-frosted-strong);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-head-right, iconSource: , active: false, stretch: false, size: small, hideLabel: true, alignLabel: end, underline: false and hasSlottedAnchor: false 2`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: pointer;
  color: var(--p-color-primary);
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  gap: 0;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -2px;
  left: -2px;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.icon {
  position: relative;
  flex-shrink: 0;
  font-size: inherit;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.label {
  z-index: 1;
  white-space: nowrap;
  text-indent: -999999px;
  overflow: hidden;
  order: 0;
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: var(--p-color-frosted-strong);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-head-right, iconSource: , active: false, stretch: false, size: small, hideLabel: true, alignLabel: end, underline: false and hasSlottedAnchor: true 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
::slotted(a) {
  all: unset !important;
}
::slotted(a)::before {
  content: "" !important;
  position: fixed !important;
  inset-block: -2px !important;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-sm)) !important;
  inset-inline: -2px !important;
}
::slotted(a:focus-visible)::before {
  outline: 2px solid var(--p-color-focus) !important;
  outline-offset: 2px !important;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: pointer;
  color: var(--p-color-primary);
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  gap: 0;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -2px;
  left: -2px;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.icon {
  position: relative;
  flex-shrink: 0;
  font-size: inherit;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.label {
  z-index: 1;
  white-space: nowrap;
  text-indent: -999999px;
  overflow: hidden;
  order: 0;
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: var(--p-color-frosted-strong);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-head-right, iconSource: , active: true, stretch: true, size: x-large, hideLabel: false, alignLabel: start, underline: false and hasSlottedAnchor: false 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: block;
  width: 100%;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: pointer;
  color: var(--p-color-primary);
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  gap: 4px;
  justify-content: space-between;
  align-items: center;
  font-size: clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem);
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  background-color: var(--p-color-frosted);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.icon {
  position: relative;
  flex-shrink: 0;
  font-size: inherit;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.label {
  z-index: 1;
  white-space: inherit;
  text-indent: 0;
  overflow: visible;
  order: -1;
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: var(--p-color-frosted-strong);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: arrow-head-right, iconSource: , active: true, stretch: true, size: x-large, hideLabel: false, alignLabel: start, underline: false and hasSlottedAnchor: false 2`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: block;
  width: 100%;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: pointer;
  color: var(--p-color-primary);
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  gap: 4px;
  justify-content: space-between;
  align-items: center;
  font-size: clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem);
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  background-color: var(--p-color-frosted);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.icon {
  position: relative;
  flex-shrink: 0;
  font-size: inherit;
  width: calc(6px + 2.125ex);
  height: calc(6px + 2.125ex);
}
.label {
  z-index: 1;
  white-space: inherit;
  text-indent: 0;
  overflow: visible;
  order: -1;
}
@supports (width: round(down, 1px, 1px)) {
  .icon {
    width: round(down, calc(6px + 2.125ex), 1px);
    height: round(down, calc(6px + 2.125ex), 1px);
  }
}

@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: var(--p-color-frosted-strong);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: none, iconSource: , active: false, stretch: false, size: inherit, hideLabel: false, alignLabel: end, underline: false and hasSlottedAnchor: false 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: pointer;
  color: var(--p-color-primary);
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  gap: 4px;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: inherit;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.label {
  position: relative;
}
@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: var(--p-color-frosted-strong);
  }
}
"
`;

exports[`getComponentCss() > should return correct css for icon: none, iconSource: , active: false, stretch: false, size: small, hideLabel: false, alignLabel: end, underline: false and hasSlottedAnchor: false 1`] = `
":host {
  transform: translate3d(0,0,0) !important;
  display: inline-block;
  width: auto;
  vertical-align: top;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
.root {
  all: unset;
  display: flex;
  width: 100%;
  cursor: pointer;
  color: var(--p-color-primary);
  text-decoration: none;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  gap: 4px;
  justify-content: flex-start;
  align-items: flex-start;
  font-size: 1rem;
}
.root::before {
  content: "";
  position: absolute;
  top: -2px;
  bottom: -2px;
  right: -4px;
  left: -4px;
  border-radius: var(--_p-legacy-radius-small, var(--p-radius-lg));
  transition: background-color var(--p-transition-duration, .25s) cubic-bezier(.25,.1,.25,1);
}
.root:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
.label {
  position: relative;
}
@media(hover:hover) {
  .root:hover::before {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background-color: var(--p-color-frosted-strong);
  }
}
"
`;
